# QNodeGraph

./: .gitignore  CMakeLists.txt  README.md  default.nix
cmake/: QNodeGraphConfig.cmake.in
examples/calculator/: CMakeLists.txt  NumberConnection.hpp  NumberGraphView.hpp  NumberInputNode.hpp  NumberOutputNode.hpp  NumberPort.hpp  TypedLineEdit.hpp  Typing.hpp  main.cpp
include/: BackgroundItem.hpp  ConnectionItem.hpp  LoadRegistry.hpp  NodeGraphScene.hpp  NodeGraphView.hpp  NodeItemGroup.hpp  NodeProxy.hpp  NodeState.hpp  PortItem.hpp  PortType.hpp  TypedConnectionItem.hpp  TypedNodeItemGroup.hpp  TypedPortItem.hpp
include/default/: DefaultBackgroundItem.hpp  DefaultConnectionItem.hpp  DefaultPortItem.hpp  UniformConnectionContainer.hpp  UniformPortContainer.hpp
include/helpers/: Conversions.hpp  Interval.hpp  QtHashing.hpp  Typing.hpp
src/: ConnectionItem.cpp  NodeGraphScene.cpp  NodeGraphView.cpp  NodeItemGroup.cpp  NodeProxy.cpp  PortItem.cpp
